--- a/app/app.css
+++ b/app/app.css
@@ -8,3 +8,12 @@
 Button.-primary {
   font-size: 18;
 }
+.myclassimage {
+  margin-top: 50px;
+  height: 300px;
+  width: 300px;
+}
+.myclassTextField {
+  height: 100px;
+  text-align: center;
+}
